# learning_langchain

./: .gitignore  pyproject.toml
chains/: conditionalchain.py  parallelchain.py  sequentialchain.py  simplechain.py
chatbot/: main.py
document_loaders/: csv_loader.py  directory_loader.py  pdf_loader.py  text_loader.py
document_loaders/types_of_documents/: sample3.txt
myvectors/: chroma.sqlite3
output_parser/: jsonparser.py  pydantic_output.py  sroutputparser.py  structured.py
prompts/: main.py
runnables/: branchrunnable.py  lambdarunnable.py  parallelrunnable.py  passthroughrunnable.py  serialrunnable.py
text_splitter/: length_based_splitter.py  markdown_text_splitter.py  python_code_splitter.py  semantic_based_splitter.py  text_strucure_splitter.py
vector_stores/: vector_store.py  vector_store_chroma.ipynb
vector_stores/myvectors/: chroma.sqlite3
